# stock-trading-agent

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  app.py  pyproject.toml  render.yaml  req.txt.backup  requirements.txt  start.sh
src/stock_analysis/: crew.py  main.py
src/stock_analysis/config/: agents.yaml  tasks.yaml
src/stock_analysis/tools/: calculator_tool.py  sec_tools.py
